--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -8,3 +8,5 @@ jobs:
       - uses: actions/checkout@v1
       - name: hello-action
         uses: ./.github/actions/hello-world 
+        with:
+          firstGreeting: "Learning Lab User"
