--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,12 +1,12 @@
-name: Docker Actions
+# name: Docker Actions
 
-on: [push]
-jobs:
-  action:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: hello-action
-        uses: ./.github/actions/hello-world 
-        with:
-          firstGreeting: "Learning Lab User"
+# on: [push]
+# jobs:
+#   action:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v1
+#       - name: hello-action
+#         uses: ./.github/actions/hello-world 
+#         with:
+#           firstGreeting: "Learning Lab User"
